feat: Complete Home Assistant integration with guest context and device capabilities
Home Assistant Integration:
- Add complete HA API endpoints for device listing, state, and control
- Add SSL verification bypass for corporate proxies (ZScaler)
- Add centralized secureFetch utility with DISABLE_SSL_VERIFICATION flag
- Add test script for HA connectivity and operations

Guest Room Controls:
- Add guest context headers (X-Guest-Name, X-Guest-Email, X-Guest-Room)
- Headers enable Workato integration for logging, CRM, and automation
- Headers safely ignored by Home Assistant when called directly
- Add fallback indicators in UI when using mock/simulated mode

Light Controls:
- Add interactive color wheel picker with HSV color selection
- Add 10 color presets for quick color changes
- Add Govee effect support (11 music effects via select entity)
- Add dynamic capability detection (only show controls device supports)
- Fix brightness scale (0-255 HA standard)
- Fix color state persistence and display

Thermostat Controls:
- Add heat/cool mode toggle with visual indicators
- Add temperature controls with +/- buttons
- Add proper HVAC mode handling (set_hvac_mode command)

Device Capabilities:
- Detect color support via supported_color_modes (hs, rgb, xy)
- Detect effect support via supported_features and effect_list
- Mock devices preserve original capabilities (no fake features)
- UI adapts to each device's actual capabilities

Mock Device Configuration:
- Room 100: Govee Table Lamp 2 (real HA) + mock bedside light/thermostat
- Other rooms: All mock devices by default
- Mock devices have basic capabilities only (no color/effects)
- Seed script updated to properly configure mock vs real devices

Dependencies:
- Add @radix-ui/react-collapsible - Add Govee effect sections

--- a/app/.env.example
+++ b/app/.env.example
@@ -144,6 +144,11 @@ WORKATO_MOCK_MODE=true
 # Home Assistant - for room controls (lights, temperature, etc.)
 # HOME_ASSISTANT_ENABLED=true
 
+# SSL Verification (for corporate proxies like ZScaler)
+# Set to 'true' if you're behind a corporate proxy that intercepts SSL certificates
+# WARNING: Only use in development! NEVER disable SSL verification in production!
+# DISABLE_SSL_VERIFICATION=false
+
 # Debug Features (DEVELOPMENT ONLY - DO NOT USE IN PRODUCTION)
 # Enable authentication debug logging in browser console
 # NEXT_PUBLIC_DEBUG_AUTH=true
