--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "verify:bedrock": "node scripts/validate-bedrock-config.js",
     "test:salesforce": "tsx scripts/test-salesforce-automated.ts",
     "test:salesforce:interactive": "tsx scripts/test-salesforce-endpoints.ts",
+    "test:home-assistant": "node scripts/test-home-assistant.js",
     "purge-idempotency": "tsx scripts/purge-idempotency-tokens.ts",
     "db:dump": "bash scripts/dump-database.sh"
   },
@@ -28,6 +29,7 @@
     "@aws-sdk/util-dynamodb": "^3.932.0",
     "@modelcontextprotocol/sdk": "^1.22.0",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
