Clean up obsolete docs and add SSL bypass for corporate proxies
- Remove obsolete documentation files:
  - BUILD_SUCCESS.md, DEPRECATED_CODE_PRESERVED.md
  - MIGRATION_MAP.md, NEXT_STEPS.md
  - PATH_UPDATES_COMPLETE.md, REORGANIZATION_COMPLETE.md
  - app/docs/SALESFORCE_SETUP.md, TESTING.md, WORKATO_SETUP.md

- Add SSL certificate verification bypass for corporate proxies:
  - New fetch-utils.ts with secureFetch() function
  - Respects DISABLE_SSL_VERIFICATION env variable
  - Update WorkatoClient to use secureFetch
  - Security warning: only for dev behind corporate proxies

- Update .gitignore:
  - Ignore /bin, /projects, /exclude directories
  - Ignore .vscode/ IDE settings

- Update README.md:
  - Fix Home Assistant documentation link

This enables development behind corporate proxies like ZScaler
that intercept SSL certificates.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,11 @@ workato/temp-*/
 # runtime files
 /var/
 /app/var/
+
+# generated files and directories
+/bin
+/projects
+/exclude
+
+# IDE settings
+.vscode/
