Change AUTH_PROVIDER default from 'okta' to 'mock'

--- a/app/.env.example
+++ b/app/.env.example
@@ -6,32 +6,12 @@ WORKATO_HOST=https://app.trial.workato.com
 WORKATO_API_AUTH_TOKEN=your_collection_api_token_here
 WORKATO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/utilities-v1
 
-# Okta Configuration (required when WORKATO_MOCK_MODE=false)
-OKTA_DOMAIN=your-tenant.okta.com
-OKTA_CLIENT_ID=your_client_id
-OKTA_CLIENT_SECRET=your_client_secret
-
-# Optional: Authorization server to use. Options: 'default', 'org', or custom server ID
-# Use 'org' for org authorization server (no /oauth2/default path)
-# Use 'default' for default custom authorization server (default if not specified)
-OKTA_AUTH_SERVER=default
-
-# Optional: Defaults to {APP_URL}/api/auth/okta/callback if not provided
-# OKTA_REDIRECT_URI=http://localhost:3000/api/auth/okta/callback
-
-# Optional: Only needed for user registration and Okta session management features
-OKTA_API_TOKEN=your_okta_api_token
-
-# Application URL (used to compute redirect URI if OKTA_REDIRECT_URI not provided)
-APP_URL=http://localhost:3000
-
 # Authentication Provider Selection
 # Options: "mock", "okta", or "cognito"
 # - "mock": Local authentication with email/password (for development/testing)
 # - "okta": Okta OAuth 2.0 authentication
 # - "cognito": Amazon Cognito OAuth 2.0 authentication
-# If not set, defaults to "okta" for backward compatibility
-# AUTH_PROVIDER=mock
+AUTH_PROVIDER=mock
 
 # Amazon Cognito Configuration (required when AUTH_PROVIDER=cognito)
 # Current deployment uses:
