Migrate AWS Bedrock CloudFormation templates and clean up .env.example
- Organize CloudFormation files into proper directory structure:
  - scripts/ for deployment scripts
  - templates/ for CloudFormation YAML files
- Add all necessary templates:
  - cognito-user-pool.yaml (User Pool with custom role attribute)
  - cognito-identity-pool.yaml (Identity Pool for Bedrock access)
  - chat-conversations-table.yaml (DynamoDB for chat storage)
- Add deployment scripts:
  - deploy-user-pool.sh (User Pool deployment)
  - deploy-identity-pool.sh (Identity Pool deployment)
  - deploy-chat-table.sh (Chat table deployment)
- Add environment examples:
  - .env.user-pool-example (User Pool configuration)
  - .env.identity-pool-example (Identity Pool configuration)
- Create concise Bedrock integration README with:
  - Directory structure overview
  - Quick start guide for all components
  - Resource descriptions and parameters
- Clean up .env.example:
  - Remove verbose Bedrock setup instructions
  - Condense multi-line comments to single lines
  - Reference vendor/aws/cloudformation/README.md for details
  - Simplify Cognito configuration comments

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,6 @@
+### This file controls feature flags and API/MCP access
+# IMPORTANT: You may need to restart the dev server after changing values!
+
 # Workato DEVELOPER API Configuration
 WORKATO_API_TOKEN=your_admin_api_token
 WORKATO_HOST=https://app.trial.workato.com
@@ -5,6 +8,10 @@ WORKATO_HOST=https://app.trial.workato.com
 # Workato API COLLECTION Configuration
 WORKATO_API_AUTH_TOKEN=your_collection_api_token_here
 WORKATO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/utilities-v1
+
+# Workato API MOCK MODE Configuration
+# If AUTH_PROVIDER is not set and WORKATO_MOCK_MODE is "true", auth provider defaults to "mock"
+WORKATO_MOCK_MODE=true
 
 # Authentication Provider Selection
 # Options: "mock", "okta", or "cognito"
@@ -14,72 +21,34 @@ WORKATO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/utiliti
 AUTH_PROVIDER=mock
 
 # Amazon Cognito Configuration (required when AUTH_PROVIDER=cognito)
-# Current deployment uses:
-# - User Pool: us-west-2_l1yPytMyD
-# - Region: us-west-2
-# - Authentication: USER_PASSWORD_AUTH (direct in-app login)
-# - Features: User registration, email verification, custom role attribute
 COGNITO_USER_POOL_ID=us-west-2_l1yPytMyD
 COGNITO_CLIENT_ID=1ss0ehv8du1d14398rioaurp0h
-# COGNITO_CLIENT_SECRET=your_client_secret_here  # Optional - only needed for confidential clients (clients with a secret)
 COGNITO_REGION=us-west-2
-
-# Optional: Defaults to {APP_URL}/api/auth/cognito/callback if not provided
 COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/cognito/callback
-
-# Optional: Domain is auto-computed from User Pool ID if not specified
+# COGNITO_CLIENT_SECRET=your_client_secret_here
 # COGNITO_DOMAIN=your-custom-domain.auth.us-west-2.amazoncognito.com
 
-# Note: AWS credentials are NOT required for user authentication
-# The application uses Cognito's public SignUp and InitiateAuth APIs
-# which don't require AWS credentials
-
 # Amazon Bedrock Integration (optional, requires AUTH_PROVIDER=cognito)
-# Enables AI-powered chat agents with streaming responses and role-specific tools
-# 
-# Requirements:
-# 1. AUTH_PROVIDER must be set to "cognito"
-# 2. COGNITO_IDENTITY_POOL_ID must be configured
-# 3. Identity Pool must be linked to the Cognito User Pool
-# 4. IAM roles must be configured for each user role (guest, manager, housekeeping, maintenance)
-# 5. Bedrock model access must be enabled in your AWS account
-#
-# Setup Instructions:
-# 1. Deploy the Identity Pool using: cd aws/cloudformation && ./deploy-identity-pool.sh dev <user-pool-id> <client-id>
-# 2. Enable Bedrock model access: https://console.aws.amazon.com/bedrock/home#/modelaccess
-# 3. Copy the Identity Pool ID from CloudFormation outputs to COGNITO_IDENTITY_POOL_ID below
-# 4. Restart the development server after configuration changes
-#
-# Identity Pool ID (required for Bedrock)
-# Format: region:uuid (e.g., us-west-2:12345678-1234-1234-1234-123456789012)
+# See vendor/aws/cloudformation/README.md for setup instructions
+# Identity Pool ID (format: region:uuid)
 COGNITO_IDENTITY_POOL_ID=us-west-2:88c48483-b39d-41e0-a8ba-cdc9ac6bfb9b
-#
-# Bedrock Model Configuration
-# Model ID (defaults to Claude 3 Sonnet if not specified)
-# Supported models: anthropic.claude-3-sonnet-20240229-v1:0, anthropic.claude-3-haiku-20240307-v1:0, anthropic.claude-3-opus-20240229-v1:0
+
+# Bedrock Model ID
 BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-20250514-v1:0
-#
-# Maximum tokens to generate (defaults to 4096)
-# Range: 1-200000 (varies by model)
+
+# Maximum tokens (defaults to 4096, range: 1-200000)
 # BEDROCK_MAX_TOKENS=4096
-#
-# Temperature for response randomness (defaults to 0.7)
-# Range: 0.0-1.0 (0.0 = deterministic, 1.0 = creative)
+
+# Temperature (defaults to 0.7, range: 0.0-1.0)
 # BEDROCK_TEMPERATURE=0.7
-#
-# AWS Region (defaults to COGNITO_REGION if not set)
-# Must match the region where your Identity Pool is deployed
+
+# AWS Region (defaults to COGNITO_REGION)
 AWS_REGION=us-west-2
-#
-# Bedrock Logging Configuration
-# Log level for Bedrock operations (defaults to 'info' in production, 'debug' in development)
-# Options: 'debug', 'info', 'warn', 'error'
+
+# Log level (defaults to 'info' in production, 'debug' in development)
 # BEDROCK_LOG_LEVEL=info
 
 # MCP (Model Context Protocol) Server Configuration
-# Remote MCP servers provide role-specific tools for AI chat agents
-# These are only used when Bedrock chat integration is enabled (requires AUTH_PROVIDER=cognito)
-#
 # Guest MCP Servers
 MCP_HOTEL_SERVICES_URL=https://mcp.hotel.example.com/services
 MCP_HOTEL_SERVICES_TOKEN=your_hotel_services_token
@@ -100,13 +69,7 @@ MCP_OPERATIONS_TOKEN=your_operations_token
 # MCP_MAINTENANCE_URL=https://mcp.hotel.example.com/maintenance
 # MCP_MAINTENANCE_TOKEN=your_maintenance_token
 
-# Feature Flags
-# Set to 'true' to enable mock mode for development/testing (bypasses real API calls)
-# IMPORTANT: Restart the Next.js dev server after changing this value!
-# Run 'npm run verify:mock' to check your configuration
-# Note: WORKATO_MOCK_MODE is maintained for backward compatibility
-# If AUTH_PROVIDER is not set and WORKATO_MOCK_MODE is "true", auth provider defaults to "mock"
-WORKATO_MOCK_MODE=true
+
 
 # External Integration Flags
 # Set to 'false' to disable specific integrations (defaults to 'true' if not set)
