chore: Update gitignore and Workato folder creation script
- Add Workato config files (.workato-ignore, .workatoenv) to gitignore
- Minor update to create_workato_folders.sh script

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ yarn-error.log*
 # kiro settings with secrets
 .kiro/settings/mcp.json
 
+# Workato
+**/.workato-ignore
+**/.workatoenv
+
 # vercel
 .vercel
 
