refactor: Migrate to integration-specific API collection variables
- Replace WORKATO_API_COLLECTION_URL with SALESFORCE_API_COLLECTION_URL
- Replace WORKATO_API_AUTH_TOKEN with SALESFORCE_API_AUTH_TOKEN
- Add TWILIO_API_COLLECTION_URL and TWILIO_API_AUTH_TOKEN
- Update all tests and scripts to use new variable names
- Add Twilio configuration support to Workato config

This provides better clarity and flexibility for managing multiple
API collections with different tokens and URLs.

--- a/app/.env.example
+++ b/app/.env.example
@@ -5,9 +5,9 @@
 WORKATO_API_TOKEN=your_admin_api_token
 WORKATO_HOST=https://app.trial.workato.com
 
-# Workato API COLLECTION Configuration
-WORKATO_API_AUTH_TOKEN=your_collection_api_token_here
-WORKATO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/utilities-v1
+# Salesforce API Collection Configuration
+SALESFORCE_API_AUTH_TOKEN=your_salesforce_collection_api_token_here
+SALESFORCE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/sf-api-collection-v1
 
 # Workato API MOCK MODE Configuration
 # If AUTH_PROVIDER is not set and WORKATO_MOCK_MODE is "true", auth provider defaults to "mock"
@@ -25,6 +25,7 @@ COGNITO_USER_POOL_ID=us-west-2_l1yPytMyD
 COGNITO_CLIENT_ID=1ss0ehv8du1d14398rioaurp0h
 COGNITO_REGION=us-west-2
 COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/cognito/callback
+# COGNITO_CLIENT_SECRET is only required for confidential clients (not needed for identity pools)
 # COGNITO_CLIENT_SECRET=your_client_secret_here
 # COGNITO_DOMAIN=your-custom-domain.auth.us-west-2.amazoncognito.com
 
@@ -80,9 +81,13 @@ MCP_OPERATIONS_TOKEN=your_operations_token
 #
 # Stripe - for payment processing
 # STRIPE_ENABLED=true
+# STRIPE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/stripe-api-collection-v1
+# STRIPE_API_AUTH_TOKEN=your_stripe_collection_api_token_here
 #
 # Twilio - for SMS notifications
 # TWILIO_ENABLED=true
+# TWILIO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/twilio-api-collection-v1
+# TWILIO_API_AUTH_TOKEN=your_twilio_collection_api_token_here
 #
 # Home Assistant - for room controls (lights, temperature, etc.)
 # HOME_ASSISTANT_ENABLED=true
