Reorganize .env.example to match workshop progression
- Structure file by workshop units (0-3) with clear section headers
- Add step-by-step references to workshop curriculum
- Set proper defaults for workshop starting point (mock mode)
- Group MCP server configs by persona (Guest/Manager)
- Move optional integrations to bottom section
- Add helpful comments about where to find values in Workato UI
- Enable debug features useful for workshop testing

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,159 +1,179 @@
-### This file controls feature flags and API/MCP access
-# IMPORTANT: You may need to restart the dev server after changing values!
+# =============================================================================
+# Dewy Resort Hotel Management - Workshop Configuration
+# =============================================================================
+# This file is organized to match the workshop progression.
+# Follow the units in order, uncommenting and configuring variables as needed.
+#
+# IMPORTANT: Restart the dev server after changing environment variables!
+# =============================================================================
 
-# Workato DEVELOPER API Configuration
-WORKATO_API_TOKEN=your_admin_api_token
-WORKATO_HOST=https://app.trial.workato.com
+# =============================================================================
+# UNIT 0: INITIAL SETUP - Mock Mode (No External Dependencies)
+# =============================================================================
+# The workshop starts with the app running in mock mode using local SQLite.
+# No external API credentials are required at this stage.
 
-# Salesforce API Collection Configuration
-SALESFORCE_API_AUTH_TOKEN=your_salesforce_collection_api_token_here
-SALESFORCE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/sf-api-collection-v1
-
-# Workato API MOCK MODE Configuration
-# If AUTH_PROVIDER is not set and WORKATO_MOCK_MODE is "true", auth provider defaults to "mock"
+# Mock Mode - Start with this enabled for Unit 0
+# Set to 'true' to use local authentication and mock data
+# Set to 'false' once you've configured Workato and Salesforce (Unit 0, Step 4)
 WORKATO_MOCK_MODE=true
 
-# Authentication Provider Selection
-# Options: "mock", "okta", or "cognito"
-# - "mock": Local authentication with email/password (for development/testing)
-# - "okta": Okta OAuth 2.0 authentication
-# - "cognito": Amazon Cognito OAuth 2.0 authentication
+# Authentication Provider - Start with mock mode
+# Options: "mock", "cognito", "okta"
+# - "mock": Local authentication with email/password (Unit 0)
+# - "cognito": Amazon Cognito OAuth 2.0 (Unit 2)
+# - "okta": Okta OAuth 2.0 (alternative to Cognito - currently unsupported)
 AUTH_PROVIDER=mock
 
-# Amazon Cognito Configuration (required when AUTH_PROVIDER=cognito)
-COGNITO_USER_POOL_ID=us-west-2_l1yPytMyD
-COGNITO_CLIENT_ID=1ss0ehv8du1d14398rioaurp0h
-COGNITO_REGION=us-west-2
-COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/cognito/callback
-# COGNITO_CLIENT_SECRET is only required for confidential clients (not needed for identity pools)
-# COGNITO_CLIENT_SECRET=your_client_secret_here
-# COGNITO_DOMAIN=your-custom-domain.auth.us-west-2.amazoncognito.com
+# Application URL
+APP_URL=http://localhost:3000
 
-# Amazon Bedrock Integration (optional, requires AUTH_PROVIDER=cognito)
-# See vendor/aws/cloudformation/README.md for setup instructions
-# Identity Pool ID (format: region:uuid)
-COGNITO_IDENTITY_POOL_ID=us-west-2:88c48483-b39d-41e0-a8ba-cdc9ac6bfb9b
+# =============================================================================
+# UNIT 0: WORKATO & SALESFORCE SETUP
+# =============================================================================
+# After completing Unit 0, Step 4, configure these to connect to live services.
 
-# Bedrock Model ID
-BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-20250514-v1:0
+# Workato Developer API Configuration (Unit 0, Step 4.1-4.2)
+# Get your API token from: Workspace Admin → Settings → API Keys & Clients
+WORKATO_API_TOKEN=your_workato_api_token_here
+WORKATO_HOST=https://app.trial.workato.com
 
-# Maximum tokens (defaults to 4096, range: 1-200000)
-# BEDROCK_MAX_TOKENS=4096
+# Salesforce API Collection Configuration (Unit 0, Step 4.10)
+# Get these from: Tools → API Platform → API Collections → salesforce-collection → Clients
+SALESFORCE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/sf-api-collection-v1
+SALESFORCE_API_AUTH_TOKEN=your_salesforce_collection_api_token_here
 
-# Temperature (defaults to 0.7, range: 0.0-1.0)
-# BEDROCK_TEMPERATURE=0.7
+# Salesforce Integration Flag
+# Set to 'true' after completing Unit 0, Step 3 (Salesforce deployment)
+SALESFORCE_ENABLED=false
 
-# AWS Region (defaults to COGNITO_REGION)
-AWS_REGION=us-west-2
+# =============================================================================
+# UNIT 1: MCP SERVER CONFIGURATION
+# =============================================================================
+# After creating your MCP servers in Unit 1, add the URLs and tokens here.
 
-# Log level (defaults to 'info' in production, 'debug' in development)
-# BEDROCK_LOG_LEVEL=info
+# Guest MCP Server (Unit 1, Step 6.2)
+# From: API Platform → MCP Servers → dewy-resort-guest
+MCP_GUEST_URL=https://mcp.hotel.example.com/services
+MCP_GUEST_TOKEN=your_guest_mcp_token
 
-# MCP (Model Context Protocol) Server Configuration
-# Guest MCP Servers
-MCP_HOTEL_SERVICES_URL=https://mcp.hotel.example.com/services
-MCP_HOTEL_SERVICES_TOKEN=your_hotel_services_token
+# Manager MCP Server (Unit 1, Step 6.2)
+# From: API Platform → MCP Servers → dewy-resort-manager
+MCP_MANAGER_URL=https://mcp.hotel.example.com/operations
+MCP_MANAGER_TOKEN=your_manager_mcp_token
+
+# Optional: Additional MCP Servers (not used in workshop)
 # MCP_ROOM_CONTROLS_URL=https://mcp.hotel.example.com/room-controls
 # MCP_ROOM_CONTROLS_TOKEN=your_room_controls_token
-#
-# Manager MCP Servers
 # MCP_ANALYTICS_URL=https://mcp.hotel.example.com/analytics
 # MCP_ANALYTICS_TOKEN=your_analytics_token
-MCP_OPERATIONS_URL=https://mcp.hotel.example.com/operations
-MCP_OPERATIONS_TOKEN=your_operations_token
-#
-# Housekeeping MCP Servers
 # MCP_HOUSEKEEPING_URL=https://mcp.hotel.example.com/housekeeping
 # MCP_HOUSEKEEPING_TOKEN=your_housekeeping_token
-#
-# Maintenance MCP Servers
 # MCP_MAINTENANCE_URL=https://mcp.hotel.example.com/maintenance
 # MCP_MAINTENANCE_TOKEN=your_maintenance_token
 
+# =============================================================================
+# UNIT 2: ENABLE AUTHENTICATED CHAT WITH BEDROCK
+# =============================================================================
+# This feature is intended for large workshops or cloud based deployments for shared token access to LLMs.
+# Switch from mock mode to Cognito authentication to enable AI chat features.
+# For individual use as a sample app, a future BYOM feature will be provided.
 
+# Amazon Cognito Configuration (Unit 2, Step 1.1)
+# Your facilitator will provide these values
+COGNITO_USER_POOL_ID=your_cognito_user_pool_id
+COGNITO_CLIENT_ID=your_cognito_client_id
+COGNITO_REGION=us-west-2
+COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/cognito/callback
 
-# External Integration Flags
-# Set to 'false' to disable specific integrations (defaults to 'true' if not set)
-# IMPORTANT: Restart the Next.js dev server after changing these values!
-#
-# Salesforce - for rooms, services, maintenance, and charges
-# SALESFORCE_ENABLED=true
-#
-# Stripe - for payment processing
-# STRIPE_ENABLED=true
-# STRIPE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/stripe-api-collection-v1
-# STRIPE_API_AUTH_TOKEN=your_stripe_collection_api_token_here
-#
-# Twilio - for SMS notifications
-# TWILIO_ENABLED=true
-# TWILIO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/twilio-api-collection-v1
-# TWILIO_API_AUTH_TOKEN=your_twilio_collection_api_token_here
-#
-# Home Assistant - for room controls (lights, temperature, etc.)
-# HOME_ASSISTANT_ENABLED=true
+# Optional Cognito Settings (usually not needed for workshop)
+# COGNITO_CLIENT_SECRET=your_client_secret_here
+# COGNITO_DOMAIN=your-custom-domain.auth.us-west-2.amazoncognito.com
 
-# SSL Verification (for corporate proxies like ZScaler)
-# Set to 'true' if you're behind a corporate proxy that intercepts SSL certificates
-# WARNING: Only use in development! NEVER disable SSL verification in production!
-# DISABLE_SSL_VERIFICATION=false
+# Amazon Bedrock Integration (Unit 2, Step 1.3)
+# Required for AI chat functionality
+# Identity Pool ID (format: region:uuid)
+COGNITO_IDENTITY_POOL_ID=your_cognito_identity_pool_id
 
-# Debug Features (DEVELOPMENT ONLY - DO NOT USE IN PRODUCTION)
-# Enable authentication debug logging in browser console
-# NEXT_PUBLIC_DEBUG_AUTH=true
+# Bedrock Model Configuration
+BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-20250514-v1:0
+AWS_REGION=us-west-2
 
-# Enable chat debug panel (shows real-time events, API calls, and message history)
-# When enabled, a debug panel appears on the right side of chat interfaces
-# Provides visibility into streaming events, tool executions, and errors
-# NEVER enable in production - zero overhead when disabled
-NEXT_PUBLIC_ENABLE_CHAT_DEBUG=false
+# Optional Bedrock Settings
+# BEDROCK_MAX_TOKENS=4096
+# BEDROCK_TEMPERATURE=0.7
+# BEDROCK_LOG_LEVEL=info
 
 # Chat Storage Configuration
 # Options: 'memory', 'mock', 'dynamodb'
-# - 'memory': In-memory storage (lost on server restart) - for testing only
-# - 'mock': SQLite database (persistent) - for development/testing
-# - 'dynamodb': DynamoDB table (persistent) - for production
-# 
-# In mock mode (WORKATO_MOCK_MODE=true), automatically uses 'mock' (SQLite)
-# In production, set to 'dynamodb' and configure CHAT_CONVERSATIONS_TABLE
-CHAT_STORAGE_MODE=dynamodb
-#
-# DynamoDB table name (required when CHAT_STORAGE_MODE=dynamodb)
-# Deploy using: cd aws/cloudformation && ./deploy-chat-table.sh <environment>
-CHAT_CONVERSATIONS_TABLE=chat-conversations-dev
+# - 'memory': In-memory storage (lost on restart) - testing only
+# - 'mock': SQLite database (persistent) - development/workshop
+# - 'dynamodb': DynamoDB table (persistent) - production
+CHAT_STORAGE_MODE=mock
+
+# DynamoDB Configuration (only needed if CHAT_STORAGE_MODE=dynamodb)
+# CHAT_CONVERSATIONS_TABLE=chat-conversations-dev
 
 # Chat Conversation Limits
-# Maximum number of messages to include in context for each request (default: 10)
-# Higher values provide more context but increase API costs and latency
-CHAT_CONTEXT_WINDOW=25
-#
-# Maximum tool use iterations per request (default: 5)
-# Prevents infinite loops when agent repeatedly calls tools
-CHAT_MAX_TOOL_LOOPS=5
-#
-# Maximum messages stored per conversation (default: 100)
-# Older messages are automatically deleted when limit is exceeded
+# CHAT_CONTEXT_WINDOW=25
+# CHAT_MAX_TOOL_LOOPS=5
 # CHAT_MAX_MESSAGES_PER_CONVERSATION=100
-#
-# Conversation expiration time in hours (default: 24)
-# Conversations are automatically deleted after this period of inactivity
 # CHAT_CONVERSATION_EXPIRATION_HOURS=24
-#
-# Cleanup interval in hours (default: 1)
-# How often to check for and delete expired conversations
 # CHAT_CLEANUP_INTERVAL_HOURS=1
-#
-# Tool execution timeout in milliseconds (default: 30000)
-# Maximum time to wait for a tool to execute before timing out
 # CHAT_TOOL_TIMEOUT_MS=30000
 
+# =============================================================================
+# UNIT 3: OPTIONAL STRIPE INTEGRATION (Challenge Mode)
+# =============================================================================
+# Only configure if attempting the "Room Upgrade" challenge (Option B)
+
+# Stripe Integration (Unit 0, Step 4.6 - Optional)
+# Set to 'true' if you configured Stripe in Workato
+STRIPE_ENABLED=false
+
+# Stripe API Collection Configuration (Optional)
+# Get these from: Tools → API Platform → API Collections → stripe-collection → Clients
+# STRIPE_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/stripe-api-collection-v1
+# STRIPE_API_AUTH_TOKEN=your_stripe_collection_api_token_here
+
+# =============================================================================
+# OPTIONAL INTEGRATIONS (Not Used in Workshop)
+# =============================================================================
+
+# Twilio - for SMS notifications
+# TWILIO_ENABLED=false
+# TWILIO_API_COLLECTION_URL=https://apim.trial.workato.com/your_workspace/twilio-api-collection-v1
+# TWILIO_API_AUTH_TOKEN=your_twilio_collection_api_token_here
+
+# Home Assistant - for room controls (lights, temperature, etc.)
+# HOME_ASSISTANT_ENABLED=false
+# HOME_ASSISTANT_URL=https://your-home-assistant-instance.com
+# HOME_ASSISTANT_TOKEN=your_home_assistant_token
+
+# =============================================================================
+# DEVELOPMENT & DEBUG SETTINGS
+# =============================================================================
+# These settings are useful during workshop troubleshooting.
+
+# SSL Verification (for corporate proxies like ZScaler)
+# Set to 'true' if behind a corporate proxy that intercepts SSL certificates
+# WARNING: Only use in development! NEVER disable SSL verification in production!
+DISABLE_SSL_VERIFICATION=false
+
+# Debug Features (DEVELOPMENT ONLY)
+# Enable authentication debug logging in browser console
+# NEXT_PUBLIC_DEBUG_AUTH=false
+
+# Enable chat debug panel (Unit 2, Step 2.2)
+# Shows real-time tool calls and API activity in the chat interface
+# Useful for observing MCP tool invocations during testing
+NEXT_PUBLIC_ENABLE_CHAT_DEBUG=true
+
 # API Debugging Configuration
-# Show fallback/mock data banner when API calls fail (useful for development)
-# Both flags must be set to 'true' for the banner to appear:
-# - SHOW_FALLBACK_ERRORS: Server-side flag to include failure data in API response
-# - NEXT_PUBLIC_SHOW_FALLBACK_ERRORS: Client-side flag to display the banner
+# Show fallback/mock data banner when API calls fail
+# Both flags must be set to 'true' for the banner to appear
 SHOW_FALLBACK_ERRORS=true
 NEXT_PUBLIC_SHOW_FALLBACK_ERRORS=true
-#
-# Pretty print API request/response details in server console (useful for debugging)
-# Server-side only, logs to terminal where Next.js is running
+
+# Pretty print API request/response details in server console
 SHOW_API_RESPONSES=true
