Add database debugging and fix setup documentation
- Add DEBUG_DB flag for database operation logging
- Log database path, tables, queries, and parameters when enabled
- Update package.json to add db:setup command using all-in-one setup-db.js
- Update README to use single db:setup command instead of two-step process
- Add DEBUG_DB documentation to .env.example

--- a/app/.env.example
+++ b/app/.env.example
@@ -164,6 +164,9 @@ DISABLE_SSL_VERIFICATION=false
 # Enable authentication debug logging in browser console
 # NEXT_PUBLIC_DEBUG_AUTH=false
 
+# Enable database debug logging (shows SQL queries and table info)
+# DEBUG_DB=false
+
 # Enable chat debug panel (Unit 2, Step 2.2)
 # Shows real-time tool calls and API activity in the chat interface
 # Useful for observing MCP tool invocations during testing
